@@ -4,7 +4,7 @@
 - multiple unit selection
 - smart unit selection (unit > building)
 - new buildings: farm, barrack
-- gold gathering
+- make gold gathering effective (resource earned)
 - music / sound
 - alert system (not enough resource, under-attack...)
 - sprite mirroring
@@ -48,4 +48,5 @@
 - Ignore units behind HUD during 'selection mode'
 - When starting pos of selection square is out of screen, some bar should be truncated
 - When a peon is in 'CHOOSE_BUILDING' and goes unselected, it doesn't reset its state
+- Rendering bug when resolution change
 ===============================================================================
