@@ -13,6 +13,7 @@
 - Units are responsible of how they handle a RightClick event (when selected)
 - Unit pops at a suitable location once trained or when construction is ended
 - Lots of code maintenance
+- Path computation is cached in PathCache
 ===============================================================================
 
 ===============================================================================
